Document JDK 24+ native access requirements
Add documentation for JEP 472 native access requirements that affect
users running snappy-java on JDK 24 or later.

Since snappy-java uses JNI to load native libraries, applications
running on JDK 24+ must add the --enable-native-access=ALL-UNNAMED
JVM flag. Per JEP 472 guidance, this is the application developer's
responsibility (not the library's).

The new section includes:
- Clear explanation of the requirement
- Examples for Maven, Gradle, sbt, and command-line usage
- Warning message examples users will encounter
- Rationale based on JEP 472's "integrity by default" policy

No code changes are needed - this is purely documentation to help
users understand and address the warnings they see on JDK 24+.

Fixes #689

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>